vr-calculation-backend-master/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vr-calc-back
  labels:
    app: vr-calc-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vr-calc-back
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vr-calc-back
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - vr-calc-back
                topologyKey: kubernetes.io/hostname
              weight: 100
              
      imagePullSecrets:
        - name: dh-pull-secret
      containers:
        - image: 172.18.171.170.nip.io:5055/docker/complex/dev/vr-calculation-backend:master
          imagePullPolicy: Always
          name: vr-calc-back
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            # limits:
            #   cpu: 5000m
            #   memory: 5120Mi
            requests:
              cpu: 500m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: vr-calc-back
spec:
  clusterIP: None
  selector:
    app: vr-calc-back
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vr-calc-back
  labels:
    app: vr-calc-back
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "64m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - vr-calc-back.dh-dev.sakhalin2.ru
      secretName: sakhalin2-tls-02
  rules:
    - host: vr-calc-back.dh-dev.sakhalin2.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vr-calc-back
                port:
                  name: http
